--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,23 +11,17 @@ stages:
           - task: TerraformInstaller@0
             inputs:
               terraformVersion: '1.5.0' 
-          
           - task: TerraformTaskV3@3
             inputs:
               provider: 'azurerm'
               command: 'init'
-              backendServiceArm: 'Azure subscription 1(97d62e53-6132-48c5-a9be-83072204c44c)'
-              backendAzureRmResourceGroupName: 'samplegroup'
-              backendAzureRmStorageAccountName: 'bharathstg'
-              backendAzureRmContainerName: 'bharathcontainer'
+              backendServiceArm: 'Azure subscription 1(94b32def-28a7-475d-bbe4-bfa09615697a)'
+              backendAzureRmResourceGroupName: 'bharathrs'
+              backendAzureRmStorageAccountName: 'manideepstg'
+              backendAzureRmContainerName: 'mcontainer'
               backendAzureRmKey: 'terraform.tfstate'
           - task: TerraformTaskV3@3
             inputs:
               provider: 'azurerm'
-              command: 'plan'
-              environmentServiceNameAzureRM: 'Azure subscription 1(97d62e53-6132-48c5-a9be-83072204c44c)'
-          - task: TerraformTaskV3@3
-            inputs:
-              provider: 'azurerm'
               command: 'apply'
-              environmentServiceNameAzureRM: 'Azure subscription 1(97d62e53-6132-48c5-a9be-83072204c44c)'
+              environmentServiceNameAzureRM: 'Azure subscription 1(1)(94b32def-28a7-475d-bbe4-bfa09615697a)'
