--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,17 +11,17 @@ stages:
           - task: TerraformInstaller@0
             inputs:
               terraformVersion: '1.5.0' 
-          - task: TerraformTaskV3@3
+          - task: TerraformTaskV4@4
             inputs:
               provider: 'azurerm'
               command: 'init'
-              backendServiceArm: 'Azure subscription 1(94b32def-28a7-475d-bbe4-bfa09615697a)'
+              backendServiceArm: 'aciserviceconnection'
               backendAzureRmResourceGroupName: 'bharathrs'
               backendAzureRmStorageAccountName: 'manideepstg'
               backendAzureRmContainerName: 'mcontainer'
               backendAzureRmKey: 'terraform.tfstate'
-          - task: TerraformTaskV3@3
+          - task: TerraformTaskV4@4
             inputs:
               provider: 'azurerm'
               command: 'plan'
-              environmentServiceNameAzureRM: 'Azure subscription 1(94b32def-28a7-475d-bbe4-bfa09615697a)'
+              environmentServiceNameAzureRM: 'aciserviceconnection'
